--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 //EDIT UNDER THIS ONLY
 
 const firebaseConfig = {
-‎  apiKey: "AIzaSyALTPFWT9Cb3_tFuYT8Xzklm_HslExNdJM",
-‎  authDomain: "secret-things.firebaseapp.com",
-‎  databaseURL: "https://secret-things-default-rtdb.firebaseio.com",
-‎  projectId: "secret-things",
-‎  storageBucket: "secret-things.firebasestorage.app",
-‎  messagingSenderId: "725755684644",
-‎  appId: "1:725755684644:web:75a5de7b8e17d56e6c35b1"
-};
+‎  apiKey: "AIzaSyDlJZJnfFVX5pH-sPXbItKbWBf8h-l0B7Q",
+‎  authDomain: "aviart-9a90f.firebaseapp.com",
+‎  databaseURL: "https://aviart-9a90f-default-rtdb.firebaseio.com",
+‎  projectId: "aviart-9a90f",
+‎  storageBucket: "aviart-9a90f.firebasestorage.app",
+‎  messagingSenderId: "436193191818",
+‎  appId: "1:436193191818:web:4f9bb5604bb3c5650fca73",
+‎  measurementId: "G-D63ERHWXYQ"
+‎};
  
 
 //DON'T EDIT BELOW THIS
